; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_devices.c_Devices_GetIOCB.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_devices.c_Devices_GetIOCB.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CPU_regX = common dso_local global i32 0, align 4
@CPU_regY = common dso_local global i32 0, align 4
@CPU_SetN = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@h_iocb = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @Devices_GetIOCB to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Devices_GetIOCB() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @CPU_regX, align 4
  %3 = and i32 %2, 143
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  store i32 134, i32* @CPU_regY, align 4
  %6 = load i32, i32* @CPU_SetN, align 4
  %7 = load i32, i32* @FALSE, align 4
  store i32 %7, i32* %1, align 4
  br label %12

8:                                                ; preds = %0
  %9 = load i32, i32* @CPU_regX, align 4
  %10 = ashr i32 %9, 4
  store i32 %10, i32* @h_iocb, align 4
  %11 = load i32, i32* @TRUE, align 4
  store i32 %11, i32* %1, align 4
  br label %12

12:                                               ; preds = %8, %5
  %13 = load i32, i32* %1, align 4
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
